# screenschema

./: .gitignore  ImplementationPlan.md  README.md  pyproject.toml
examples/hello_world/: handlers.cpp  screenschema.s3.yaml  screenschema.yaml
examples/multi_app/: device.yaml
examples/multi_app/clock_pkg/: app.yaml  handlers.cpp
ota-server/: Dockerfile  docker-compose.yml  server.py
screenschema/boards/: esp32c6-waveshare-lcd.yaml  esp32p4-jc4880p443c.yaml  esp32s3-4848s040c.yaml  esp32s3-es3c28p.yaml  esp32s3-wroom.yaml  lilygo-t-deck.yaml
screenschema/cli/: __init__.py  asset_pipeline.py  board_registry.py  codegen.py  component_registry.py  main.py  requirements.txt  schema.py  serial_bridge.py  watcher.py
screenschema/cli/templates/: app_cpp.j2  app_hpp.j2  cmakelists.j2  handlers_cpp.j2  handlers_hpp.j2  main_cmakelists.j2  main_cpp.j2  sim_cmakelists.j2  sim_main.j2
screenschema/components/: button_row.yaml  icon_label.yaml  info_row.yaml  metric_card.yaml  section_header.yaml  select_row.yaml  slider_row.yaml  toggle_row.yaml
screenschema/layouts/: dashboard.yaml  list_screen.yaml  scrollable.yaml  settings_screen.yaml  single_screen.yaml  split.yaml  tabbed.yaml
screenschema/runtime/: CMakeLists.txt  idf_component.yml
screenschema/runtime/core/: ss_app_base.cpp  ss_app_base.hpp  ss_audio_queue.cpp  ss_audio_queue.hpp  ss_background.cpp  ss_background.hpp  ss_battery.cpp  ss_battery.hpp  ss_context.cpp  ss_context.hpp  ss_device.cpp  ss_device.hpp  ss_device_server.cpp  ss_device_server.hpp  ss_event_bus.cpp  ss_event_bus.hpp  ss_fonts.hpp  ss_gateway.cpp  ss_gateway.hpp  ss_heartbeat.cpp  ss_heartbeat.hpp  ss_http_client.cpp  ss_http_client.hpp  ss_input.cpp  ss_input.hpp  ss_mdns.cpp  ss_mdns.hpp  ss_notification.cpp  ss_notification.hpp  ss_serial_bridge.cpp  ss_serial_bridge.hpp  ss_shell.cpp  ss_shell.hpp  ss_system_app.cpp  ss_system_app.hpp  ss_update_manager.cpp  ss_update_manager.hpp  ss_websocket.cpp  ss_websocket.hpp  ss_widget_config.hpp  (+8 more)
screenschema/runtime/hal/: ss_audio.hpp  ss_display.hpp  ss_hal.cpp  ss_hal.hpp  ss_touch.hpp
screenschema/runtime/hal/drivers/audio/: ss_audio_es8311.cpp  ss_audio_es8311.hpp  ss_audio_i2s.cpp  ss_audio_i2s.hpp
screenschema/runtime/hal/drivers/display/: ili9341.cpp  ili9341.hpp  st7701s_dsi.cpp  st7701s_dsi.hpp  st7789.cpp  st7789.hpp
screenschema/runtime/hal/drivers/input/: ss_keyboard_i2c.cpp  ss_keyboard_i2c.hpp  ss_trackball_gpio.cpp  ss_trackball_gpio.hpp
screenschema/runtime/hal/drivers/touch/: ft6236.cpp  ft6236.hpp  gt911.cpp  gt911.hpp
screenschema/schema/: board.schema.json  component.schema.json  screenschema.schema.json
screenschema/sim/: lv_conf.h
screenschema/sim/compat/: esp_brookesia.hpp  esp_log.h
screenschema/sim/compat/freertos/: FreeRTOS.h  semphr.h  task.h
