[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screenschema"
version = "0.2.0"
description = "YAML-driven UI framework for ESP32 devices"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "jsonschema>=4.0",
    "click>=8.0",
    "pyserial>=3.5",
    "watchdog>=3.0",
    "pillow>=10.0",
]

[project.scripts]
screenschema = "screenschema.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["screenschema"]

[tool.hatch.build.targets.wheel.shared-data]
# Nothing — runtime/boards/etc are inside the package directory and
# picked up automatically as package data.

[tool.hatch.build.targets.wheel.force-include]
"screenschema/runtime"    = "screenschema/runtime"
"screenschema/boards"     = "screenschema/boards"
"screenschema/components" = "screenschema/components"
"screenschema/layouts"    = "screenschema/layouts"
"screenschema/schema"     = "screenschema/schema"
